opam-version: "1.2"
maintainer: "ilias.gar@gmail.com"
authors: ["Ilias Garnier"]
homepage: "https://github.com/igarnier/clustering"
bug-reports: "https://github.com/igarnier/clustering/issues"
dev-repo: "git+https://github.com/igarnier/clustering.git"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "dune"                {build}
  "batteries"
]
available: [ ocaml-version >= "4.04.1" ]
descr: "
k-means, k-medoids and agglomerative clustering in OCaml
"
